--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-body { font-family: sans-serif; margin: 0; background-color: #f4f4f4; }
-header { background: #333; color: #fff; padding: 1rem; text-align: center; }
+body { font-family: sans-serif; margin: 0; background-color: #f4f4f400; }
+header { background: #000000; color: #ffffff; padding: 1rem; text-align: center; }
 input[type="text"] { width: 60%; padding: 8px; }
 main {justify-content: center; padding: 1rem; }
 .product-card {
@@ -11,6 +11,13 @@ main {justify-content: center; padding: 1rem; }
     width: 200px;
     text-align: center;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    transition: 0.7s;
+}
+.product-card:hover{
+    transform: scale(1.05);
+}
+#product-list{
+    display: flex; flex-wrap: wrap;
 }
 .product-card img { max-width: 100%; height: auto; }
 .product-card h3 { font-size: 1.1em; }
